--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-dinky
+theme: jekyll-theme-cayman
 Title: Sena Torlak's Progress Journal
 Description : This journal is created for ETM 58D.
